CASMINST-6734: SW_ADMIN_PASSWORD variable is not required to be set for tests anymore
