# docs/NLS_swagger.yaml
@@ -18,8 +18,6 @@ definitions:
         items:
           type: string
         type: array
-      switchPassword:
-        type: string
       wipeOsd:
         type: boolean
     type: object
@@ -50,8 +48,6 @@ definitions:
         additionalProperties:
           type: string
         type: object
-      switchPassword:
-        type: string
       workflowType:
         description: used to determine storage rebuild vs upgrade
         type: string
