# src/api/models/nls/ncn_rebuild.go
@@ -2,7 +2,7 @@
  *
  *  MIT License
  *
- *  (C) Copyright 2022 Hewlett Packard Enterprise Development LP
+ *  (C) Copyright 2022,2024 Hewlett Packard Enterprise Development LP
  *
  *  Permission is hereby granted, free of charge, to any person obtaining a
  *  copy of this software and associated documentation files (the "Software"),
@@ -32,7 +32,6 @@ import (
 type CreateRebuildWorkflowRequest struct {
 	Hosts                []string          `json:"hosts"`
 	DryRun               bool              `json:"dryRun"`
-	SwitchPassword       string            `json:"switchPassword,omitempty"`
 	ZapOsds              bool              `json:"zapOsds,omitempty"`      // this is necessary for storage rebuilds when unable to wipe the node prior to rebuild
 	WorkflowType         string            `json:"workflowType,omitempty"` // used to determine storage rebuild vs upgrade
 	ImageId              string            `json:"imageId,omitempty"`
